fixing package to be read properly

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@dm-cdk-helper",
+  "name": "dm-cdk-helper",
   "version": "0.0.1",
   "description": "Reusable AWS CDK helpers for Step Functions, Lambda, and more",
-  "private": true,
   "workspaces": [
     "packages/step"
   ],
