--- a/packages/step/tsconfig.json
+++ b/packages/step/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "target": "ES2020",  
       "module": "commonjs",
+      "declaration": true, 
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
@@ -11,7 +12,8 @@
       "isolatedModules": true,
       "sourceMap": true,
       "noEmit": false, 
+      "rootDir": ".", 
       "outDir": "../../dist/step"
     },
-    "include": ["src/**/*.ts", "tests/**/*.ts"]
+    "include": ["./lib/**/*.ts"]
   }
